// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vimeo Video Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  />
</DocumentFragment>
`;

exports[`Vimeo Video Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-0"
  />
</DocumentFragment>
`;
